--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,15 +3,15 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="This Privacy Policy applies beginning May 7, 2020. You may change your consent anytime in our App Settings. Magic PhotoAI (or " we")="" collects="" information="" from="" you="" in="" order="" to="" provide="" better="" service="" and="" give="" a="" user="" experience.="" we="" always="" put="" your="" privacy="" as="" the="" first="" consideration="" policy="" explains="" how="" collect,="" use,="" protect="" information."="">
-    <title>Magic PhotoAI Labs Privacy Policy</title>
+    <meta name="description" content="This Privacy Policy applies beginning May 7, 2020. You may change your consent anytime in our App Settings. MessageClassic (or " we")="" collects="" information="" from="" you="" in="" order="" to="" provide="" better="" service="" and="" give="" a="" user="" experience.="" we="" always="" put="" your="" privacy="" as="" the="" first="" consideration="" policy="" explains="" how="" collect,="" use,="" protect="" information."="">
+    <title>MessageClassic Labs Privacy Policy</title>
   </head>
   <body>
-    <h1>Magic PhotoAI Labs Privacy Policy</h1>
+    <h1>MessageClassic Labs Privacy Policy</h1>
 
     <p>
       This Privacy Policy applies beginning July 7, 2020. You may change your
-      consent anytime in our App Settings. Magic PhotoAI (or "we") collects information
+      consent anytime in our App Settings. MessageClassic (or "we") collects information
       from you in order to provide better service and give you a better user
       experience. We always put your privacy as the first consideration and
       Privacy Policy explains how we collect, use, and protect your information.
@@ -19,7 +19,7 @@
 
     <h3>1. Data controller and representative</h3>
     <p>
-      Magic PhotoAI Labs, and its subsidiaries* ("Magic PhotoAI" or "we", or "our" or "us"),
+      MessageClassic Labs, and its subsidiaries* ("MessageClassic" or "we", or "our" or "us"),
       cares about the privacy of your personal information and is committed to
       protecting it. We may have to collect your personal data to provide you
       with the best weapons and the most up-to-date security. We do not take
@@ -43,7 +43,7 @@
     </p>
     <ul>
       <li>
-        information you make available to us when you open a Magic PhotoAI account or use
+        information you make available to us when you open a MessageClassic account or use
         another service (Twitter，Facebook), such as your name, telephone
         number, email address;
       </li>
@@ -55,7 +55,7 @@
 
       <li>
         information you make available to us and/or public via your use of
-        Application and/or another service which you use to open your Magic PhotoAI
+        Application and/or another service which you use to open your MessageClassic
         account;
       </li>
 
@@ -145,7 +145,7 @@
     <ul>
       <li>
         Provide Application and Services (and the features within Application)
-        to you, such as to show to other users in Magic PhotoAI such as your connected
+        to you, such as to show to other users in MessageClassic such as your connected
         friends or other users on the platform;
       </li>
       <li>
@@ -239,7 +239,7 @@
       Where the use of your information is based on consent, you can withdraw
       this consent at any time without affecting the lawfulness of processing
       based on consent before its withdrawal. Requests should be submitted by
-      contacting us through [getphotospace@gmail.com].
+      contacting us through [chatbotai.feedback@gmail.com].
     </p>
     <p></p>
     <p>
@@ -371,17 +371,17 @@
       10. Children's Information
     </h3>
     <p>
-      Magic PhotoAI does not knowingly collect any personal identification information
+      MessageClassic does not knowingly collect any personal identification information
       from children under the age of 13 (or such legally required age of consent
       for Juveniles as defined under applicable laws) or knowingly allow such
-      person to register on Magic PhotoAI. In the event that we are notified that we have
+      person to register on MessageClassic. In the event that we are notified that we have
       collect personal information from a child under the age of 13 (or such
       legally required age of consent for Juveniles as defined under applicable
       laws) without parental consent, we will suspend the account and delete
       relevant information as quickly as possible. If you believe that we might
       have any information from a child under 13(or such legally required age of
       consent for Juveniles as defined under applicable laws), please contact us
-      at getphotospace@gmail.com.
+      at chatbotai.feedback@gmail.com.
     </p>
     <h3>
       11. Contacting Us
@@ -390,7 +390,7 @@
       If you have any questions or comments about this Policy or our privacy
       practices, or to report any violations of the Policy or abuse of an
       Application, the Services or the Site, please contact us at 
-      getphotospace@gmail.com.
+      chatbotai.feedback@gmail.com.
     </p>
     <h3>
       12. Changes to This Privacy Policy
