--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -86,6 +86,11 @@
             </p>
 
             <p>
+              SMS and MMS: function use. When you use SMS and MMS services, the app will temporarily access your system's SMS content for SMS sending and receiving. The charging of message content depends on the operator you use. The information will not collect and store your SMS content. Set messages as your default SMS application to experience more messaging capabilities.
+            </p>
+
+
+            <p>
               other information made available by you or others that gives an
               indication as to where you are or have been located, such as
               account information that indicates where you are located, and
