update privacy policy

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -10,12 +10,13 @@
     <h1>MessageClassic Labs Privacy Policy</h1>
 
     <p>
-      This Privacy Policy applies beginning July 7, 2020. You may change your
-      consent anytime in our App Settings. MessageClassic (or "we") collects information
-      from you in order to provide better service and give you a better user
-      experience. We always put your privacy as the first consideration and
-      Privacy Policy explains how we collect, use, and protect your information.
+      This Privacy Policy has been created to disclose our information collection, use and disclosure practices for the Messaging Classic ("Messaging") application.
     </p>
+
+    <p>
+      Messaging is a replacement application on Android mobile phones that allows users to send and receive messages via their mobile carrier (using the SMS and MMS protocol). Messages are only ever transported between mobile phones and mobile carriers. We do not collect and do not store these messages on our servers. Also, we never share these messages with third parties.
+    </p>
+
 
     <h3>1. Data controller and representative</h3>
     <p>
@@ -67,8 +68,7 @@
       <li>
         Information we collect as you use Application, such as certain Location
         Data and Log Data.
-        <ul>
-          <li>
+       
             <p>
               "Location Data" is information that we collect regarding your
               location (when you use a location-enabled service), including:
@@ -85,19 +85,31 @@
               Application; and
             </p>
 
-            <p>
-              SMS and MMS: function use. When you use SMS and MMS services, the app will temporarily access your system's SMS content for SMS sending and receiving. The charging of message content depends on the operator you use. The information will not collect and store your SMS content. Set messages as your default SMS application to experience more messaging capabilities.
-            </p>
+     </li>
+
+     <li>
+
+        <p>
+          SMS and MMS: function use. When you use SMS and MMS services, the app will temporarily access your system's SMS content for SMS sending and receiving. The charging of message content depends on the operator you use. The information will not collect and store your SMS content. Set messages as your default SMS application to experience more messaging capabilities.
 
 
-            <p>
-              other information made available by you or others that gives an
-              indication as to where you are or have been located, such as
-              account information that indicates where you are located, and
-              shared information that you or others post which indicates your
-              location.
-            </p>
-          </li>
+          We do not collect or store any personally identifiable information on our servers.
+          All SMS and MMS messages you send and receive, which also includes your phone number are transited via your mobile carrier and never by us.
+
+          Your contact / address book is only accessed to associate contact names and contact pictures with your conversations and messages. Your contact information is never collected, uploaded or stored on our servers.
+
+
+        </p>
+
+
+        <p>
+          other information made available by you or others that gives an
+          indication as to where you are or have been located, such as
+          account information that indicates where you are located, and
+          shared information that you or others post which indicates your
+          location.
+        </p>
+      </li>
 
           <li>
             "Log Data" is technical information that is automatically collected
