update message one

--- a/messageone/privacy_policy.html
+++ b/messageone/privacy_policy.html
@@ -164,7 +164,6 @@
                     services as well as to improve our products.The information that may be accessed, collected or
                     shared may be used for application analysis or advertising analysis or other third-party SDK, which
                     can be viewed in the privacy policy of "APPENDIX - ADVERTISING NETWORKS AND PARTNERS" below.</p>
-    <li>Read your Web bookmarks and history</li>
     <li>Change/intercept network settings and traffic</li>
     <li>Identity/Contacts</li>
     <li>Find accounts on the device</li>
@@ -180,7 +179,6 @@
     <li>Send SMS messages</li>
     <li>Phone</li>
     <li>Directly call phone numbers</li>
-    <li>Reroute outgoing calls</li>
     <li>Read phone status and identity</li>
     <li>Photos / Media / Files / Storage</li>
     <li>Read the contents of your USB storage</li>
@@ -190,7 +188,7 @@
     <li>Record audio</li>
     <li>Wi-Fi connection information</li>
     <li>View Wi-Fi connections</li>
-    <li>Device ID & call information</li>
+    <li>Device ID</li>
     <li>Read phone status and identity</li>
 
     <h3>
